# holidays_bot

./: .gitignore  holidays_bot.py  pyproject.toml  telegram_bot.py  telegram_calendar.py
